@@ -78,11 +78,14 @@ Template for new versions:
 - `quickstart`: refresh quickstart guide
 
 ## API
+- ``Units::isForgottenBeast``: property check for forgotten beasts
+- ``Units::isGreatDanger``: now includes forgotten beasts
 
 ## Lua
 - ``widgets.Label``: ``*pen`` attributes can now either be a pen or a function that dynamically returns a pen
 - `helpdb`: ``search_entries`` now returns a match if *all* filters in the ``include`` list are matched. previous behavior was to match if *any* ``include`` filter matched.
 - ``matinfo.decode``: now directly handles plant objects
+- ``dfhack.units.isForgottenBeast``: make new units method available to Lua
 
 ## Removed
 
